--- a/magma.html
+++ b/magma.html
@@ -44,19 +44,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="http://drive.google.com/uc?export=view&id=1qlYd0Ss1CuqJtwVeqkLGhdF_YOAh-kC8" alt="">
+                  <img src="https://ik.imagekit.io/ishani/Portfolio/Magma/magma-2.png?ik-sdk-version=javascript-1.4.3&updatedAt=1671619509290" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="http://drive.google.com/uc?export=view&id=1mKcRv79gpbiFFz-90JiG75dUEJQ_qdis" alt="">
+                  <img src="https://ik.imagekit.io/ishani/Portfolio/Magma/magma-5.png?ik-sdk-version=javascript-1.4.3&updatedAt=1671619509255" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="http://drive.google.com/uc?export=view&id=1S-2ZcfGX2fFEACVITGQU0OmTS-E4Xhlp" alt="">
+                  <img src="https://ik.imagekit.io/ishani/Portfolio/Magma/magma-4.png?ik-sdk-version=javascript-1.4.3&updatedAt=1671619501000" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="http://drive.google.com/uc?export=view&id=1FYcZHvfsExDWs6-omkGtZ2Us2-V8MsJe" alt="">
+                  <img src="https://ik.imagekit.io/ishani/Portfolio/Magma/magma-3.png?ik-sdk-version=javascript-1.4.3&updatedAt=1671619525310" alt="">
                 </div>
 
               </div>
