--- a/roboticGirl.html
+++ b/roboticGirl.html
@@ -44,19 +44,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="" alt="">
+                  <img src="http://drive.google.com/uc?export=view&id=11VitKRTYmjOrV1tYWTsHSvKoj8RufqHW" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="" alt="">
+                  <img src="http://drive.google.com/uc?export=view&id=1i-IkS-pBblLOEnpfZ88k7DDuI8ZK4qpw" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="" alt="">
+                  <img src="http://drive.google.com/uc?export=view&id=1xdzYEHyENrTh0Ea_XFs4C_3Nhb736kjh" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="" alt="">
+                  <img src="http://drive.google.com/uc?export=view&id=1Oe6bbvhiWjA0OJzPokUEP_dJQaEAFa4b" alt="">
                 </div>
 
               </div>
