--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>UI/UX Designer &amp; Creative Dsigner</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua. -->
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -381,9 +381,13 @@
               <ul>
                 <li><em>(2019 - 2020)</em></li>
               </ul>
-              <p><strong>3. Former UI/UX Designer at (Pvt)Ltd</strong></p>
+              <p><strong>3. Former UI/UX Designer at Inkspace (Pvt)Ltd</strong></p>
               <ul>
                 <li><em>(2017 - 2019)</em></li>
+              </ul>
+              <p><strong>4. Complete 6 month Internship at AMKreation (Pte)Ltd</strong></p>
+              <ul>
+                <li><em>(2017)</em></li>
               </ul>
             </div>
 
@@ -3578,7 +3582,7 @@
     </section><!-- End Portfolio Section -->
 
 
-    <!-- ======= Testimonials Section ======= -->
+    <!-- ======= Testimonials Section ======= 
     <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -3600,7 +3604,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End testimonial item -->-->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
