--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I consider myself as a creative, motivated entrepreneurial, responsible, with initiative and punctuality, I accept with pleasure the challenges and goals that my clients could assign me, with good handle of the interpersonal relationships, ability to work in teams, so as to solve problems eciently and achieve the goals set by the company and my work group.</p>
+          <p>Hi, I'm Ishani! Driven by creativity and a strong entrepreneurial spirit, I thrive on tackling challenges and turning ideas into impactful designs. With a keen eye for detail, I bring both initiative and punctuality to every project, committed to creating solutions that meet client goals and push boundaries. Collaboration and communication are my superpowers, making me a strong team player who values interpersonal connections and works effectively under pressure. My mission? To solve problems elegantly, elevate brands, and achieve excellence for every project I take on.</p>
         </div>
 
         <div class="row">
