--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h1>Ishani Wijesooriya</h1>
       <p>I'm a <span class="typed" data-typed-items="UI/UX Engineer, Creative Designer, Freelancer, Painter"></span></p>
       <div class="social-links">
-        <!--a href="#" class="twitter"><i class="bx bxl-twitter"></i></a-->
+        <a href="https://www.behance.net/ishaniwijesooriya" class="behance"><i class="bx bxl-behance"></i></a>
         <a href="https://www.facebook.com/IArtsDoodle" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/iartsdoodle/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!--a href="#" class="google-plus"><i class="bx bxl-skype"></i></a-->
@@ -97,7 +97,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BSc Honours</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ishani.iarts@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
