--- a/index.html
+++ b/index.html
@@ -57,10 +57,14 @@
       <p>I'm a <span class="typed" data-typed-items="UI/UX Engineer, Creative Designer, Freelancer, Painter"></span></p>
       <div class="social-links">
         <a href="https://www.behance.net/ishaniwijesooriya" class="behance"><i class="bx bxl-behance"></i></a>
-        <a href="https://www.facebook.com/IArtsDoodle" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://dribbble.com/Ishani_" class="dribbble"><i class="bx bxl-dribbble"></i></a>
+        <a href="https://www.fiverr.com/inwijesuriya" class="fiverr"><i class="bx bxl-fiverr"></i></a>
+        <a href="https://www.freepik.com/author/ishaniw" class="freepik"><i class="bx bxl-freepik"></i></a>
+        <a href="https://stock.adobe.com/contributor/211688875/Ishani" class="stock"><i class="bx bxl-stock"></i></a>
+        <a href="https://www.shutterstock.com/g/Ishani+Wijesooriya?rid=393842133" class="shutterstock"><i class="bx bxl-shutterstock"></i></a>
+        <!--a href="https://www.facebook.com/IArtsDoodle" class="facebook"><i class="bx bxl-facebook"></i></a-->
         <a href="https://www.instagram.com/iartsdoodle/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <!--a href="#" class="google-plus"><i class="bx bxl-skype"></i></a-->
-        <a href="https://www.linkedin.com/in/ishani-wijesooriya-55000a182/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <!--a href="https://www.linkedin.com/in/ishani-wijesooriya-55000a182/" class="linkedin"><i class="bx bxl-linkedin"></i></a-->
       </div>
     </div>
   </section><!-- End Hero -->
@@ -349,7 +353,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>In here I would like to present my education qualifications, working experience & the project details of the main projects that I have worked on past few years. </p>
+          <p>Welcome to My Journey.. Here, you'll find a showcase of my educational background, professional experience, and details on the key projects I’ve brought to life over the past few years. Each step reflects my growth, dedication, and commitment to excellence in every design and project I undertake. </p>
         </div>
 
         <div class="row">
@@ -372,8 +376,8 @@
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>As a UI/UX Engineer</h4>
-              <h5>2019 - 2023</h5>
-              <p><strong>1. Currently working as a UI/UX engineer in OREL IT</strong></p>
+              <h5>2019 - 2024</h5>
+              <p><strong>1. Currently working as a UI/UX engineer in OREL Corporation</strong></p>
               <ul>
                 <li><em>(2020 - 2023)</em></li>
               </ul>
@@ -430,51 +434,72 @@
             <div class="resume-item">
               <h4>UI/UX Engineer</h4>
               <h5>2019 - Present</h5>
-              <p><strong>1. OrelBuy Marketplace (2021 - Present)</strong></p>
+
+              <p><strong>1. Orange Electric Website (2024 Ongoing)</strong>
+              </p> <p>Company Website Development</p> 
+              <p><em>The official website for Orange Electric, developed using WordPress and designed in Figma, highlights the company's innovative electrical solutions and provides a seamless user experience for customers to explore products and services.</em></p>
+
+              <p><strong>2. OREL Corporation Website (2024)</strong>
+              </p> <p>Company Website Development</p> 
+              <p><em>OREL Corporation’s official website, developed using WordPress and designed in Figma, serves as the digital face of the company, showcasing its brand, services, and corporate values.</em></p>
+
+              <p><strong>3. i'Orel Management System (2023 Ongoing)</strong></p> 
+              <p>UI/UX Design</p> 
+              <p><em>i'Orel is a comprehensive management system developed to streamline company operations. My role focused on crafting intuitive and efficient UI/UX designs using Figma, enhancing usability and user experience for the platform.</em></p>
+
+              <p><strong>4. Signamax Website (2023)</strong></p> 
+              <p>Company Website Design & Development</p> 
+              <p><em>Signamax, our U.S.-based company, now has an official website showcasing its range of networking and connectivity solutions. Designed in Figma and developed in WordPress, the site serves as a digital hub for clients in the U.S. market.</em></p>
+
+              <p><strong>5. Analytica Project (2022)</strong></p> 
+              <p>Company Analytics Management Design</p> 
+              <p><em>Analytica is an internal company project focused on analytics management, designed to help track and optimize company metrics. I was responsible for crafting the UI/UX design using Figma, ensuring a streamlined and intuitive experience for internal users.</em></p>
+              
+              <p><strong>6. OrelBuy Marketplace (2021)</strong></p>
               <p>Mobile, Web & Backoffice UI/ UX Design</p>
               <p><em>Orel Buy is an online marketplace is an e-commerce site that connects sellers with buyers. It's often known as an electronic marketplace and all transactions are managed by the marketplace owner. Companies use online marketplaces to reach customers who want to purchase their products and services.</em></p>
 
-              <p><strong>2. Document Tracker - BOI (2021)</strong></p>
+              <p><strong>7. Document Tracker - BOI (2021)</strong></p>
               <p>Mobile & Web UI/ UX Design</p>
               <p><em>The online site that connects the BOI, employee team. They can create the document and track the document status till it closed.</em></p>
 
-              <p><strong>3. Icitizen (2021)</strong></p>
+              <p><strong>8. Icitizen (2021)</strong></p>
               <p>Mobile UI/ UX Design</p>
               <p><em>Icitizen application helps users to get their check-in, check-out details. Also, they can get emergency contacts, share their QR code and record their own health information using health ID.</em></p>
 
-              <p><strong>4. V-Force (2021)</strong></p>
+              <p><strong>9. V-Force (2021)</strong></p>
               <p>Mobile UI/ UX Design</p>
               <p><em>V-Force is a digital platform to collect real time data and requirements of all Hospital necessary to treat Covid Patients</em></p>
 
-              <p><strong>5. LECO Customer Portal (2020)</strong></p>
+              <p><strong>10. LECO Customer Portal (2020)</strong></p>
               <p>Mobile UI/ UX Design</p>
               <p><em>LECO web portal provides some automated solutions that will help to perform their business operations efficiently.</em></p>
 
-              <p><strong>6. Orel Office App (2020)</strong></p>
+              <p><strong>11. Orel Office App (2020)</strong></p>
               <p>Mobile UI/ UX Design</p>
               <p><em>Orel Office is a platform to manage all company apps in one place.</em></p>
 
-              <p><strong>7. Simpli5Mgmt</strong></p>
+              <p><strong>712. Simpli5Mgmt</strong></p>
               <p>Web UI/ UX Design</p>
               <p><em>Simpli5Mgmt is a product which helps the users to achieve their Tasks and Goals</em></p>
 
-              <p><strong>8. Simpli5Analytica</strong></p>
+              <p><strong>13. Simpli5Analytica</strong></p>
               <p>Web UI/ UX Design</p>
               <p><em>Digital platform to visualize organizational data for management decisions.</em></p>
 
-              <p><strong>9. Simpli5Ayubowan</strong></p>
+              <p><strong>14. Simpli5Ayubowan</strong></p>
               <p>Web UI/ UX Design</p>
               <p><em>Sign in every organizational apps in one place</em></p>
 
-              <p><strong>10. Simpli5Uni</strong></p>
+              <p><strong>15. Simpli5Uni</strong></p>
               <p>Web UI/ UX Design</p>
               <p><em>Simpli5 Uni is a digital platform to provide online courses</em></p>
 
-              <p><strong>11. Orel Share (2020)</strong></p>
+              <p><strong>16. Orel Share (2020)</strong></p>
               <p>Web UI/ UX Design</p>
               <p><em>Orel Share is a donation/ sharing system that allows user to share items like meal, cloth, essential pack and etc. Choose item you want to share, tag location to your sharing. Then other user can see nearest shared items to their location so grab the shared items. Use GPS navigation to find the route.</em></p>
 
-              <p><strong>12. Lions Brewery Web Portal (2019)</strong></p>
+              <p><strong>17. Lions Brewery Web Portal (2019)</strong></p>
               <p>Mobile & Web UI/ UX Design</p>
               <p><em>Entertainment web portal for T-20 Cricket world cup.</em></p>
             </div>
@@ -490,7 +515,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Over the past few years as a UI/UX Engineer & a Creative Designer, I have worked in so many projects. This portfolio session is a representation of all that I have worked and accomplished as a designer. And also it show how my creative thinking skills have evolved over past few years.</p>
+          <p>As a UI/UX Engineer and Creative Designer, I’ve had the opportunity to work on a diverse range of projects over the years. This portfolio showcases my journey and accomplishments as a designer, highlighting the evolution of my creative thinking and problem-solving skills. Here, you’ll find the results of my dedication to crafting impactful designs that bring value to users and clients alike.</p>
         </div>
 
         <div class="row">
