--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
       <div class="social-links">
         <a href="https://www.behance.net/ishaniwijesooriya" class="behance"><i class="bx bxl-behance"></i></a>
         <a href="https://dribbble.com/Ishani_" class="dribbble"><i class="bx bxl-dribbble"></i></a>
+        <a href="https://www.facebook.com/IArtsDoodle" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/iartsdoodle/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/ishani-wijesooriya-55000a182/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://www.fiverr.com/inwijesuriya" class="fiverr"><i class="bx bxl-fiverr"></i></a>
         <a href="https://www.freepik.com/author/ishaniw" class="freepik"><i class="bx bxl-freepik"></i></a>
         <a href="https://stock.adobe.com/contributor/211688875/Ishani" class="stock"><i class="bx bxl-stock"></i></a>
         <a href="https://www.shutterstock.com/g/Ishani+Wijesooriya?rid=393842133" class="shutterstock"><i class="bx bxl-shutterstock"></i></a>
-        <!--a href="https://www.facebook.com/IArtsDoodle" class="facebook"><i class="bx bxl-facebook"></i></a-->
-        <a href="https://www.instagram.com/iartsdoodle/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <!--a href="https://www.linkedin.com/in/ishani-wijesooriya-55000a182/" class="linkedin"><i class="bx bxl-linkedin"></i></a-->
       </div>
     </div>
   </section><!-- End Hero -->
