--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Ishani Wijesooriya</h1>
+      <h1>Ishani Wijesooriya 2</h1>
       <p>I'm a <span class="typed" data-typed-items="UI/UX Engineer, Creative Designer, Freelancer, Painter"></span></p>
       <div class="social-links">
         <a href="https://www.behance.net/ishaniwijesooriya" class="behance"><i class="bx bxl-behance"></i></a>
