--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
       <h1>Ishani Wijesooriya</h1>
       <p>I'm a <span class="typed" data-typed-items="UI/UX Engineer, Creative Designer, Freelancer, Painter"></span></p>
       <div class="social-links">
-        <a href="https://www.fiverr.com/inwijesuriya" class="fiverr" target="_blank" rel="noopener noreferrer"><img src="assets/img/icons/fiverr.svg" alt="Fiverr" width="20" height="20" /></a>
-        <a href="https://www.freepik.com/author/ishaniw" class="freepik" target="_blank" rel="noopener noreferrer"><img src="assets/img/icons/freepik.svg" alt="Freepik" width="20" height="20" /></a>
-        <a href="https://www.behance.net/ishaniwijesooriya" class="behance" target="_blank" rel="noopener noreferrer"><img src="assets/img/icons/behance.svg" alt="Behance" width="20" height="20" /></a>
-        <a href="https://dribbble.com/Ishani_" class="dribbble" target="_blank" rel="noopener noreferrer"><img src="assets/img/icons/dribbble.svg" alt="Dribbble" width="20" height="20" /></a>
-        <a href="https://stock.adobe.com/contributor/211688875/Ishani" class="stock" target="_blank" rel="noopener noreferrer"><img src="assets/img/icons/adobe-stock-icon.svg" alt="Adobe Stock" width="20" height="20" /></a>
-        <a href="https://www.dreamstime.com/ishaniwijesooriya_info" class="dreamstime" target="_blank" rel="noopener noreferrer"><img src="assets/img/icons/dreamstime.svg" alt="Dreamstime" width="20" height="20" /></a>
-        <a href="https://www.shutterstock.com/g/Ishani+Wijesooriya?rid=393842133" class="shutterstock" target="_blank" rel="noopener noreferrer"><img src="assets/img/icons/shutterstock.svg" alt="Shutterstock" width="20" height="20" /></a>
-        <a href="https://www.linkedin.com/in/ishani-wijesooriya-55000a182/" class="linkedin" target="_blank" rel="noopener noreferrer"><img src="assets/img/icons/linkedin-161-svgrepo-com.svg" alt="LinkedIn" width="20" height="20" /></a>
+        <a href="https://www.fiverr.com/inwijesuriya" class="fiverr" target="_blank" rel="noopener noreferrer"><img src="https://ik.imagekit.io/ishani/Portfolio/icons/fiverr.svg?updatedAt=1756465123804" alt="Fiverr" width="20" height="20" /></a>
+        <a href="https://www.freepik.com/author/ishaniw" class="freepik" target="_blank" rel="noopener noreferrer"><img src="https://ik.imagekit.io/ishani/Portfolio/icons/freepik.svg?updatedAt=1756465123419" alt="Freepik" width="20" height="20" /></a>
+        <a href="https://www.behance.net/ishaniwijesooriya" class="behance" target="_blank" rel="noopener noreferrer"><img src="https://ik.imagekit.io/ishani/Portfolio/icons/behance.svg?updatedAt=1756465123578" alt="Behance" width="20" height="20" /></a>
+        <a href="https://dribbble.com/Ishani_" class="dribbble" target="_blank" rel="noopener noreferrer"><img src="https://ik.imagekit.io/ishani/Portfolio/icons/dribbble.svg?updatedAt=1756465123511" alt="Dribbble" width="20" height="20" /></a>
+        <a href="https://stock.adobe.com/contributor/211688875/Ishani" class="stock" target="_blank" rel="noopener noreferrer"><img src="https://ik.imagekit.io/ishani/Portfolio/icons/adobe-stock.svg?updatedAt=1756465123891" alt="Adobe Stock" width="20" height="20" /></a>
+        <a href="https://www.dreamstime.com/ishaniwijesooriya_info" class="dreamstime" target="_blank" rel="noopener noreferrer"><img src="https://ik.imagekit.io/ishani/Portfolio/icons/dreamstime.svg?updatedAt=1756465123675" alt="Dreamstime" width="20" height="20" /></a>
+        <a href="https://www.shutterstock.com/g/Ishani+Wijesooriya?rid=393842133" class="shutterstock" target="_blank" rel="noopener noreferrer"><img src="https://ik.imagekit.io/ishani/Portfolio/icons/shutterstock.svg?updatedAt=1756465123707" alt="Shutterstock" width="20" height="20" /></a>
+        <a href="https://www.linkedin.com/in/ishani-wijesooriya-55000a182/" class="linkedin" target="_blank" rel="noopener noreferrer"><img src="https://ik.imagekit.io/ishani/Portfolio/icons/linkedin.svg?updatedAt=1756465123519" alt="LinkedIn" width="20" height="20" /></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -89,7 +89,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/portfolio/ishani.png" class="img-fluid" alt="">
+            <img src="https://ik.imagekit.io/ishani/Portfolio/profile/ishani.jpg?updatedAt=1756466347849" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content"></br>
             <h3>UI/UX Designer &amp; Creative Dsigner</h3>
